style: fix text alignment to center

--- a/src/styles/MyPage/EditProfile.css
+++ b/src/styles/MyPage/EditProfile.css
@@ -47,7 +47,11 @@
   
   .editProfileselectWrapper {
     position: relative;
-  }
+  } 
+  
+  .editProfileselectWrapper select {
+    text-align: center;
+  } 
 
   .editProfileselectedInterests {
     display: flex;
